test: test github contribution

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ h2 {
       left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: #FF002E;
+      background-color: #0000;
       z-index: 10;
       display: flex;
       justify-content: center;
